--- a/package.json
+++ b/package.json
@@ -4,12 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "lite-server"
+    "start": "lite-server",
+    "lint": "eslint src",
+    "lint:fix": "eslint --fix"
   },
   "keywords": [],
   "author": "Aaron Powell <me@aaron-powell.com>",
   "license": "MIT",
   "devDependencies": {
-    "lite-server": "^2.5.4"
+    "eslint": "^7.6.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "husky": "^4.2.5",
+    "lite-server": "^2.5.4",
+    "prettier": "^2.0.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
   }
 }
